k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk021-myapp
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk021-myapp
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/path: '/actuator/prometheus'
        update: 33c3e9aa
      labels:
        app: sk021-myapp
    spec:
      serviceAccountName: default
      containers:
      - name: myapp
        image: amdp-registry.skala-ai.com/skala25a/sk021-myapp:1.0.0-4c86c436fe40
        imagePullPolicy: Always
