k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sk021-myfirst-ingress
  namespace: skala-practice
spec:
  ingressClassName: public-nginx
  rules:
  - host: sk021-ingress.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: sk021-myapp
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - 'sk021-ingress.skala25a.project.skala-ai.com'
    secretName: sk021-ingress-project-tls-cert
